infrastructure/velero/velero-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: velero-ui
  namespace: velero
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    # Βεβαιώσου ότι αυτό το label ταιριάζει με το label που έχει το velero pod σου
    name: velero
