infrastructure/velero/velero-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero-ui-ingress
  namespace: velero
spec:
  ingressClassName: nginx
  rules:
  - host: velero.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velero-ui # <--- ΑΛΛΑΓΗ ΕΔΩ
            port:
              number: 8080
